--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
-    <title>Home</title>
+    <title>Document</title>
 </head>
 <body>
-    <button class="logout-btn"><a href="logout">Log out</a></button>
-    <h1>Authentication Project Home Page</h1>
+    <h2>Authentication project home page</h2>
 </body>
 </html>
